--- a/config.toml
+++ b/config.toml
@@ -124,8 +124,9 @@ defaultContentLanguageInSubdir = false
   #   For more info on the highlighting options, see:
   #   https://sourcethemes.com/academic/post/writing-markdown-latex/#highlighting-options
   highlight = true
-  highlight_languages = []
-  # highlight_style = "github"
+  highlight_languages = ["r"]
+  highlight_style = "monokai-sublime"
+
 
   # Enable native social sharing buttons?
   sharing = true
