--- a/config.toml
+++ b/config.toml
@@ -124,7 +124,7 @@ defaultContentLanguageInSubdir = false
   #   For more info on the highlighting options, see:
   #   https://sourcethemes.com/academic/post/writing-markdown-latex/#highlighting-options
   highlight = true
-  highlight_languages = ["r"]
+  highlight_languages = ["r", "bash", "html"]
   highlight_style = "monokai-sublime"
 
 
