--- a/config.toml
+++ b/config.toml
@@ -15,7 +15,7 @@ paginate = 10
 disqusShortname = ""
 
 # Enable analytics by entering your Google Analytics tracking ID
-googleAnalytics = ""
+googleAnalytics = "UA-124927328-1"
 
 # Default language to use (if you setup multilingual support)
 defaultContentLanguage = "en"
