--- a/config.toml
+++ b/config.toml
@@ -12,7 +12,7 @@ preserveTaxonomyNames = true
 paginate = 10
 
 # Enable comments by entering your Disqus shortname
-disqusShortname = ""
+disqusShortname = "adamgruerblog"
 
 # Enable analytics by entering your Google Analytics tracking ID
 googleAnalytics = "UA-124927328-1"
